# redis-Learning-project

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  redis_improve.md  restart_backend.py
backend/: Dockerfile  alembic.ini  check_users.py  create_superuser.py  create_test_expenses.py  create_test_superuser.py  debug_api.py  final_test_validation.py  initial_data.py  main.py  menu_system_summary.md  pyproject.toml  run_tests.py  simple_test.py  simple_test_fixed.py  test.db  test_menu_api.py  test_menu_system.py  test_runner.py  test_user.db  verify_admin.py
backend/alembic/: env.py
backend/alembic/versions/: d48a52657373_initial_migration.py
backend/api/: api.py  deps.py
backend/api/endpoints/: expenses.py  login.py  menus.py  users.py
backend/core/: config.py  security.py
backend/crud/: __init__.py  crud_menu.py  crud_user.py
backend/db/: session.py
backend/design/menu/: menu_design_document.md
backend/models/: expense.py  user.py
backend/schemas/: __init__.py  expense.py  user.py
backend/tests/: README_FIXED.md  __init__.py  conftest.py  conftest_fixed.py  test_core_fixed.py  test_summary.md  test_summary_final.md
backend/tests/e2e/scenarios/: __init__.py  test_user_workflow.py
backend/tests/integration/api/: test_auth.py  test_users.py
backend/tests/rules/: test_document.md
backend/tests/unit/crud/: __init__.py  test_crud_user.py
backend/tests/unit/models/: test_menu.py  test_user.py
backend/tests/unit/schemas/: test_user.py
frontend/: .eslintrc.cjs  .prettierrc.cjs  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/dashboard/: AccountsCard.vue  ExpenseCard.vue  RecentTransactionsCard.vue  (+1 more)
frontend/src/layouts/: DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/schemas/: expense.ts  token.ts  user.ts
frontend/src/services/: api.ts
frontend/src/stores/: auth.ts
frontend/src/utils/: http.ts
frontend/src/views/: About.vue  Dashboard.vue  Home.vue  Login.vue
(+3 files in other folders)
