[project]
name = "cat-expense-backend"
version = "0.1.0"
description = "Backend for Cat Expense Tracker"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
    "redis",
    "pydantic[email]",
    "pydantic-settings",
    "alembic",
]

[tool.setuptools]
packages = ["api", "core", "crud", "db", "models", "schemas"] 